--- a/code/trunk/prototype/application.properties
+++ b/code/trunk/prototype/application.properties
@@ -1,8 +1,9 @@
 #Grails Metadata file
-#Wed Mar 30 17:59:26 CST 2011
+#Wed Mar 30 22:43:02 CST 2011
 app.grails.version=1.3.6
 app.name=prototype
 app.servlet.version=2.4
 app.version=0.1
+plugins.fixtures=1.0.5
 plugins.hibernate=1.3.6
 plugins.tomcat=1.3.6
