--- a/code/trunk/prototype/application.properties
+++ b/code/trunk/prototype/application.properties
@@ -1,9 +1,11 @@
 #Grails Metadata file
-#Wed Mar 30 22:43:02 CST 2011
+#Sat Apr 09 17:14:34 CST 2011
 app.grails.version=1.3.6
 app.name=prototype
 app.servlet.version=2.4
 app.version=0.1
 plugins.fixtures=1.0.5
+plugins.functional-test=1.2.7
 plugins.hibernate=1.3.6
+plugins.json-rest-api=1.0.3
 plugins.tomcat=1.3.6
