--- a/code/trunk/prototype/application.properties
+++ b/code/trunk/prototype/application.properties
@@ -1,9 +1,10 @@
 #Grails Metadata file
-#Thu Apr 14 18:00:10 CST 2011
+#Fri Apr 15 17:33:36 CST 2011
 app.grails.version=1.3.6
 app.name=prototype
 app.servlet.version=2.4
 app.version=0.1
 plugins.fixtures=1.0.5
 plugins.hibernate=1.3.6
+plugins.json-rest-api=1.0.3
 plugins.tomcat=1.3.6
