--- a/code/trunk/prototype/application.properties
+++ b/code/trunk/prototype/application.properties
@@ -1,10 +1,15 @@
-#Grails Metadata file
-#Thu Apr 21 22:49:14 CST 2011
 app.grails.version=1.3.6
 app.name=prototype
 app.servlet.version=2.4
 app.version=0.1
+plugins.famfamfam=1.0.1
 plugins.fixtures=1.0.5
+plugins.functional-test=1.2.7
 plugins.hibernate=1.3.6
-plugins.json-rest-api=1.0.3
+plugins.jquery=1.5.2
+plugins.jquery-ui=1.8.11
+plugins.mail=1.0-SNAPSHOT
+plugins.spring-security-core=1.1.2
+plugins.spring-security-ui=0.1.2
 plugins.tomcat=1.3.6
+plugins.webflow=1.3.6
