--- a/code/trunk/prototype/application.properties
+++ b/code/trunk/prototype/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Thu Apr 21 23:20:32 CST 2011
+#Tue May 03 14:02:30 CST 2011
 app.grails.version=1.3.6
 app.name=prototype
 app.servlet.version=2.4
@@ -9,6 +9,7 @@ plugins.fixtures=1.0.5
 plugins.hibernate=1.3.6
 plugins.jquery=1.5.2
 plugins.jquery-ui=1.8.11
+plugins.json-rest-api=1.0.3
 plugins.mail=1.0-SNAPSHOT
 plugins.spring-security-core=1.1.2
 plugins.spring-security-ui=0.1.2
